--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/wyvernnot/npm_in_action/issues"
   },
-  "homepage": "https://github.com/wyvernnot/npm_in_action#readme"
+  "homepage": "https://github.com/wyvernnot/npm_in_action#readme",
+  "dependencies": {
+    "debug": "^2.2.0"
+  }
 }
