--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "node util/init_config.js"
+    "postinstall": "node util/init_config.js",
+    "preinstall":"env"
   },
   "repository": {
     "type": "git",
