--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "node util/init_config.js",
-    "preinstall":"node -e 'console.log(process.env.npm_config_argv)'"
+    "preinstall":"node -e \"require('assert').ok(!process.env.npm_config_save,'save option is not supported')\""
   },
   "repository": {
     "type": "git",
