--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "node util/init_config.js",
-    "preinstall":"node -e \"process.env.npm_config_save && throw new Error('save option is not supported')\""
+    "preinstall":"node -e \"process.env.npm_config_save && throw ('save option is not supported')\""
   },
   "repository": {
     "type": "git",
